[tool.poetry]
name = "ya-aioclient"
version = "0.6.4"
description = ""
authors = ["scx1332 <sieciech.czajka@golem.network>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

packages = [
    { include = "ya_market", from="src" },
    { include = "ya_payment", from="src" },
    { include = "ya_activity", from="src" },
    { include = "ya_net", from="src" }
]
include=["py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
python-dateutil = "^2.8.1"
certifi="^2020.6.20"

[tool.poetry.dev-dependencies]
pyyaml = "^6"
dataclasses = { version = "^0.7", python = "~3.6"}
mypy = "^1.0"
any_case = "^0.1.6"
pylint = "^2.5.3"
pytest = "^5.4.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
